[gd_scene load_steps=3 format=3 uid="uid://5ecf5b5kub6u"]

[ext_resource type="Script" path="res://UI/Credits.gd" id="1_egn1k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ip5b"]
bg_color = Color(0, 0, 0, 0.823529)
border_width_left = 100
border_width_top = 100
border_width_right = 100
border_width_bottom = 100
border_color = Color(0.345098, 0, 0.0901961, 1)
border_blend = true

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_egn1k")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8ip5b")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.772549, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.180392, 0.521569, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Who Helped Make this???"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="DefectiveMelon" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer"]
modulate = Color(0, 1, 1, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "DefectiveMelon"

[node name="Loki_Howell_Studios" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Loki_Howell_Studios"

[node name="jpkinsella" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer"]
modulate = Color(1, 0.529412, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "jpkinsella"

[node name="lex_catto" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer"]
modulate = Color(0.992157, 0.972549, 0.690196, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "lex_catto"

[node name="sugonugo" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer"]
modulate = Color(0.541176, 1, 0.172549, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "sugonugo"

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/CenterContainer"]
layout_mode = 2

[node name="TheJadeRose" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/CenterContainer/VBoxContainer"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "TheJadeRose"

[node name="the holy noobness" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "the holy noobness"

[node name="Zoe" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Zoe"

[node name="Coco" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/CenterContainer/VBoxContainer"]
modulate = Color(1, 0, 1, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Coco"

[node name="Music" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/CenterContainer/VBoxContainer"]
modulate = Color(0, 0, 0.972549, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Music"

[node name="Back" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.443137)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Back"

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer/DefectiveMelon" to="." method="_on_defective_melon_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer/Loki_Howell_Studios" to="." method="_on_loki_howell_studios_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer/jpkinsella" to="." method="_on_jpkinsella_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer/lex_catto" to="." method="_on_lex_catto_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer/sugonugo" to="." method="_on_sugonugo_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/CenterContainer/VBoxContainer/TheJadeRose" to="." method="_on_the_jade_rose_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/CenterContainer/VBoxContainer/the holy noobness" to="." method="_on_the_holy_noobness_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/CenterContainer/VBoxContainer/Zoe" to="." method="_on_zoe_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/CenterContainer/VBoxContainer/Music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
